<resources>
    <string name="app_name">Plant Doctor</string>
    <string name="login">Login</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="ready">Ready?</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_up">Sign up</string>
    <string name="home">Home</string>
    <string name="clinic_s">Clinic\'s</string>
    <string name="safe_tomatoes">Safe Tomatoes</string>
    <string name="sign_out">Sign-out</string>
    <string name="tomato_mosaic_virus">Tomato Mosaic Virus</string>
    <string name="appearance">Appearance</string>
    <string name="tomata_mosaic_ide">The foliage of affected tomato plants shows mottling, with alternating yellowish and darker green areas, the latter often appearing thicker and raised giving a blister-like appearance</string>
    <string name="solution">Solution</string>
    <string name="tomato_mosaic_sol">Remove all infected plants and destroy them. Do NOT put them in the compost pile, as the virus may persist in infected plant matter. Monitor the rest of your plants closely, especially those that were located near infected plants.</string>
    <string name="know_more">Know more</string>
    <string name="target_spot_text">Target spot of tomato often causes necrotic lesions in a concentric pattern, similar to early blight. Target spot of tomato is favored by temperatures of 68 to 82°F and leaf wetness periods as long as 16 hours. The target spot fungus can survive in host residue for a period.</string>
    <string name="target_spot_sol">Remove old plant debris at the end of the growing season; otherwise, the spores will travel from debris to newly planted tomatoes in the following growing season Water tomato plants in the morning so the leaves have time to dry. Water at the base of the plant or use a soaker hose or drip system to keep the leaves dry. Apply a mulch to keep the fruit from coming in direct contact with the soil.</string>
    <string name="target_spot">Target Spot</string>
    <string name="bacterial_spot">Bacterial Spot</string>
    <string name="bacterial_sol">Remove old vegetable debris in the garden and do not plant new crops where host plants were once growing. There are no recognized chemical treatments for bacterial leaf spot disease. Your best bet is prevention and mechanical control at the first sign of symptoms of bacterial leaf spot.</string>
    <string name="bact_val">Bacterial spot appears on leaves as small (less than ⅛ inch), sometimes water-soaked (i.e., wet-looking) circular areas. Spots may initially be yellow-green, but darken to brownish-red as they age.</string>
    <string name="tylc_h">Tomato yellow leaf curl virus</string>
    <string name="tylc_text">TYLCV caused a range of symptoms that include marginal leaf yellowing, upward or downward leaf cupping, reduction in leaf size, flower and/or fruit drop, and plant stunting.</string>
    <string name="tylc_sol">Imidacloprid should be sprayed on the entire plant and below the leaves; eggs and flies are often found below the leaves. Spray every 14-21 days and rotate on a monthly basis with Abamectin so that the whiteflies do not build-up resistance to chemicals.</string>
    <string name="late_blight">Late Blight</string>
    <string name="late_bligt_txt">In tomatoes, firm, dark brown, circular spots grow to cover large parts of fruits. Spots may become mushy as secondary bacteria invade. In high humidity, thin powdery white fungal growth appears on infected leaves, tomato fruit and stems.</string>
    <string name="late_blight_sol">Avoid planting tomatoes on sites that were previously in potatoes or close to potatoes. Sequential planting or planting several crops of tomatoes over time will reduce the risk of late blight destroying all tomatoes at once. Spraying fungicides is the most effective way to prevent late blight.</string>
    <string name="early_blight">Early Blight</string>
    <string name="early_text">Early blight infection starts at the bottom of the plant with leaf spotting and yellowing. Initially, small dark spots form on older foliage near the ground. Leaf spots are round, brown and can grow up to 1/2 inch in diameter.</string>
    <string name="early_sol"><![CDATA[Tomatoes that have early blight require immediate attention before the disease takes over the plants. Thoroughly spray the plant (bottoms of leaves also) with Bonide Liquid Copper Fungicide concentrate or Bonide Tomato & Vegetable. Both of these treatments are organic.]]></string>
    <string name="septoria_leaf_spot">Septoria leaf spot</string>
    <string name="spectoria_txt">Appear as small, water-soaked, circular spots 1/16 to 1/8 in diameter on the undersides of older leaves. The centers of these spots then turn gray to tan and have a dark-brown margin. The spots are distinctively circular and are often quite numerous.</string>
    <string name="spectoria_sol">Removing infected leaves. Remove infected leaves immediately, and be sure to wash your hands and pruners thoroughly before working with uninfected plants. Consider organic fungicide options what is the best fungicide for Septoria leaf spot? Most fungicides registered for use on tomatoes would effectively control Septoria leaf spot. These include maneb, mancozeb, chlorothalonil, and benomyl.</string>
    <string name="leaf_mold">Leaf Mold</string>
    <string name="leaf_mold_text">Pale greenish-yellow spots, usually less than 1/4 inch, with no definite margins, form on the upper sides of leaves. Olive-green to brown velvety mold forms on the lower leaf surface below leaf spots. Leaf spots grow together and turn brown. Leaves wither and die but often remain attached to the plant.</string>
    <string name="leaf_mold_sol">Applying fungicides when symptoms first appear can reduce the spread of the leaf mold fungus significantly. Several fungicides are labeled for leaf mold control on tomatoes and can provide good disease control if applied to all the foliage of the plant, especially the lower surfaces of the leaves.</string>
    <string name="for_disease_detection_click_here">for Disease detection Click Here</string>
    <string name="solution1">SOLUTION</string>
    <string name="for_treatment_advice">For Treatment Advice</string>
    <string name="click_here">Click here</string>
    <string name="select_the_city">Select the city</string>
    <string name="to_visit">To visit</string>
    <string name="tamil_nadu_agricultural_university">Tamil Nadu Agricultural University</string>
    <string name="annamalai_university">Annamalai University</string>
    <string name="college_of_agricultural_technology_theni">College Of Agricultural Technology, Theni</string>
    <string name="agricultural_college_and_research_institute_kudumiyanmalai">Agricultural College and Research Institute, Kudumiyanmalai</string>
    <string name="adhiparasakthi_agricultural_college_apac">Adhiparasakthi Agricultural College (APAC)</string>
    <string name="vanavarayar_institute_of_agriculture_via">Vanavarayar Institute of Agriculture (VIA)</string>
    <string name="rvs_agricultural_college">RVS Agricultural College</string>
    <string name="don_bosco_college_of_agriculture">Don Bosco College of Agriculture</string>
    <string name="sethu_bhaskara_agricultural_college_and_research_foundation">Sethu Bhaskara Agricultural College and Research Foundation</string>
    <string name="not_listed_click_here">Not Listed Click here</string>
    <string name="welcome">Welcome</string>
    <string name="abt_tomatoes">Tomatoes are the major dietary source of the antioxidant lycopene, which has been linked to many health benefits, including reduced risk of heart disease and cancer. They are also a great source of vitamin C, potassium, folate, and vitamin K. Usually red when mature, tomatoes can also come in a variety of colors, including yellow, orange, green, and purple. What’s more, many subspecies of tomatoes exist with different shapes and flavor.</string>
    <string name="nutrition_facts">Nutrition facts</string>
    <string name="nutrients">The water content of tomatoes is around 95%. The other 5% consists mainly of carbohydrates and fiber.</string>
    <string name="tom">Tomatoes are often harvested while still green and immature, then ripened artificially with ethylene gas. This may lead to less flavor development, resulting in bland tomatoes.</string>
</resources>