<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile_page">


    <soup.neumorphism.NeumorphTextView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:onClick="back_to_home"
        android:background="@drawable/back_btn"
        android:backgroundTint="@color/white"
        android:id="@+id/back_btn_profile"
        app:neumorph_shadowColorLight="@color/light_stroke"
        app:neumorph_shadowColorDark="@color/dark_stroke"
        android:elevation="20sp"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/top_design"
        android:background="@drawable/profile_top"
        />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rect15"
        android:backgroundTint="@color/color_change1"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:id="@+id/liner"
        android:layout_marginTop="90dp"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="80sp"
            android:layout_height="80dp"
            android:src="@mipmap/ic_launcher_round"

            android:layout_gravity="center"
            android:id="@+id/profile_pic"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/acme"
            android:text="@string/name"
            android:textColor="@color/color_change"
            android:textSize="26sp" />





    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/liner"
        >

        <TextView
            android:id="@+id/email_dis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/acme"
            android:text="@string/email_address"
            android:textColor="@color/text_color"
            android:textSize="26sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:id="@+id/phone_dis"
            android:fontFamily="@font/acme"
            android:text="@string/phone_number"
            android:textColor="@color/text_color"
            android:textSize="26sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/location_dis"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/acme"
            android:text="@string/location"
            android:textColor="@color/text_color"
            android:textSize="26sp"/>


        <soup.neumorphism.NeumorphButton
            android:id="@+id/sign_out_btn"
            style="@style/Widget.Neumorph.Button"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_gravity="center"

            android:text="@string/sign_out"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:neumorph_backgroundColor="@color/red_2"

            app:neumorph_shadowColorDark="@color/orange_2"
            app:neumorph_shadowColorLight="@color/red_2"
            app:neumorph_shadowElevation="4dp"

            app:neumorph_shapeType="flat" />

    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        >

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottom_profile_apr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:background="@drawable/bottom_menu_background"
            android:layout_alignParentBottom="true"
            app:fabCradleMargin="15sp"
            android:layout_gravity="bottom"
            app:fabCradleRoundedCornerRadius="20dp"
            >

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottom_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:menu="@menu/bottom_menu"


                />


        </com.google.android.material.bottomappbar.BottomAppBar>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/login"
            android:src="@drawable/tomato_scan"

            app:layout_anchor="@id/bottom_profile_apr" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>








</RelativeLayout>